chore: safeguard pre-projectactivity working state
